Cleaned up the BigDecimal from the project. Replaced the functionality with double primitive type instead. At this point, only the MatrixController works. All the other functionality of the project is at a stand-still. I will leave that for the time-being, as I want to work on the decimal/fractional functionality without having to worry about updating all other controllers for every change.