@@ -1,21 +1,18 @@
 package matrix.fileManaging;
 
 import matrix.gui.MatrixApp;
-import matrix.utility.BigDecimalUtil;
 import matrix.model.Matrix;
-import matrix.utility.FileUtil;
+import matrix.operators.MatrixUtil;
 
 import java.io.*;
-import java.math.BigDecimal;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static matrix.fileManaging.MatrixType.*;
 
 public class MatrixFileHandler {
     private static final Map<String, Matrix> matrices = new HashMap<>();
 
-    public static void saveMatrixDataToFile (String fileName, String determinant, List<List<String>> matrixData, MatrixType matrixType) {
+    public static void saveMatrixDataToFile (String fileName, double determinant, List<List<String>> matrixData, MatrixType matrixType) {
         try (BufferedWriter writer = new BufferedWriter(new FileWriter(fileName, false))) {
             for (List<String> row : matrixData) {
                 String line = String.join(" ", row);
@@ -42,15 +39,14 @@ public class MatrixFileHandler {
         }
     }
 
-    public static List<List<String>> loadMatrixDataFromFile(String filePath) {
+    public static List<List<String>> loadMatrixDataFromFile (String filePath) {
         List<List<String>> matrixData = new ArrayList<>();
+
         try (BufferedReader reader = new BufferedReader(new FileReader(filePath))) {
             String line;
             while ((line = reader.readLine()) != null) {
-                if (!line.isBlank()) {
-                    List<String> rowData = Arrays.stream(line.trim().split("\\s+"))
-                            .map(MatrixFileHandler::formatCellValue)
-                            .collect(Collectors.toList());
+                if (!line.isBlank()) { // Avoid processing empty lines
+                    List<String> rowData = Arrays.asList(line.trim().split("\\s+")); // Handles varying amounts of whitespace
                     matrixData.add(rowData);
                 }
             }
@@ -59,15 +55,6 @@ public class MatrixFileHandler {
         }
         return matrixData;
     }
-
-    private static String formatCellValue(String value) {
-        if (MatrixApp.isFractionMode() && value.contains("/")) {
-            return BigDecimalUtil.convertFractionToDecimal(value).toPlainString();
-        }
-//        System.out.println("This is the formatted cell value inside the file handler class: \n" + value);
-        return value;
-    }
-
 
     public static List<List<String>> loadMatrixDataFromMatrix (Matrix matrix) {
         System.out.println("Matrix is being loaded from the available matrix.");
@@ -87,49 +74,21 @@ public class MatrixFileHandler {
         return matrixData;
     }
 
-    public static Matrix loadMatrixFromFile(String filePath) {
+    public static Matrix loadMatrixFromFile (String filePath) {
         List<List<String>> matrixData = loadMatrixDataFromFile(filePath);
 
-        if (matrixData.isEmpty()) {
-            populateMatrixIfEmpty();
-            return new Matrix(1, 1);
-        } else {
-            int numRows = matrixData.size();
-            int numCols = matrixData.get(0).size();
-            Matrix matrix = new Matrix(numRows, numCols);
+        int numRows = matrixData.size();
+        int numCols = matrixData.getFirst().size();
+        Matrix matrix = new Matrix(numRows, numCols);
 
-            for (int row = 0; row < numRows; row++) {
-                for (int col = 0; col < numCols; col++) {
-                    String cellValue = matrixData.get(row).get(col);
-                    try {
-                        if (cellValue.contains("/")) {
-                            if (MatrixApp.isFractionMode()) {
-                                // In fraction mode, keep the fraction format
-                                matrix.setValue(row, col, cellValue);
-                            } else {
-                                // In decimal mode, convert fraction to decimal
-                                BigDecimal decimalValue = BigDecimalUtil.convertFractionToDecimal(cellValue);
-                                matrix.setValue(row, col, decimalValue.toPlainString());
-                            }
-                        } else {
-                            // For decimal values, directly set the value
-                            if (!MatrixApp.isFractionMode()) {
-                                // In decimal mode, use the value as is
-                                matrix.setValue(row, col, cellValue);
-                            } else {
-                                // In fraction mode, convert decimal to fraction
-                                BigDecimal decimalValue = new BigDecimal(cellValue);
-                                String fractionValue = BigDecimalUtil.convertDecimalToFraction(decimalValue);
-                                matrix.setValue(row, col, fractionValue);
-                            }
-                        }
-                    } catch (NumberFormatException e) {
-                        System.out.println("Invalid number format in matrix file: " + cellValue);
-                    }
-                }
+        for (int row = 0; row < numRows; row++) {
+            for (int col = 0; col < numCols; col++) {
+                double value = Double.parseDouble(matrixData.get(row).get(col));
+                matrix.setValue(row, col, String.valueOf(value));
             }
-            return matrix;
         }
+
+        return matrix;
     }
 
     public static void populateMatrixIfEmpty() {
@@ -140,7 +99,7 @@ public class MatrixFileHandler {
         );
 
         // Save the default matrix data to the file
-        MatrixFileHandler.saveMatrixDataToFile(FilePath.MATRIX_PATH.getPath(), String.valueOf(BigDecimal.ZERO), defaultMatrixData, REGULAR);
+        MatrixFileHandler.saveMatrixDataToFile(FilePath.MATRIX_PATH.getPath(), 0, defaultMatrixData, REGULAR);
     }
 
     public static Matrix getMatrix(String key) {
